# github-runner-image-builder

./: .gitignore  .licenserc.yaml  README.md  pyproject.toml  requirements.txt  test.txt  test_file_name  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: integration_test.yaml  openstack.yaml  promote.yaml  release.yaml  test.yaml  test_arm64.yaml
doc/explanation/: external-builder.md
doc/how-to/: pin-github-runner-version.md  use-external-builder-vm.md
doc/tutorial/: quick-start.md
docs/explanation/: external-builder.md
docs/how-to/: use-external-builder-vm.md
snap/: snapcraft.yaml
src-docs/: builder.md  cli.md  config.md  errors.md  openstack_builder.md  store.md  utils.md
src/github-runner-image-builder/: builder.py
src/github_runner_image_builder/: __init__.py  __main__.py  builder.py  chroot.py  cli.py  cloud_image.py  config.py  errors.py  logging.py  openstack_builder.py  openstack_manager.py  state.py  store.py  upload.py  utils.py
src/github_runner_image_builder/templates/: cloud-init.sh.j2
templates/: cloud-init.sh.j2
tests/: conftest.py
tests/integration/: commands.py  conftest.py  helpers.py  requirements.txt  test_image.py  test_openstack_builder.py  types.py
tests/integration/testdata/: test_script.sh
tests/unit/: factories.py  test_builder.py  test_chroot.py  test_cli.py  test_cloud_image.py  test_config.py  test_openstack_builder.py  test_openstack_manager.py  test_store.py  test_upload.py  test_utils.py
