[project]
name = "github-runner-image-builder"
version = "0.0.1"
authors = [{ name = "Yanks Yoon", email = "yangsoo.yoon@canonical.com" }]
description = "A github runner image builder package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/canonical/github-runner-image-builder-snap"
Issues = "https://github.com/canonical/github-runner-image-builder-snap/issues"
